--- a/Vade/Storyboards/Base.lproj/Main.storyboard
+++ b/Vade/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -306,21 +307,153 @@
             </objects>
             <point key="canvasLocation" x="3482.608695652174" y="116.51785714285714"/>
         </scene>
-        <!--Train-->
+        <!--Train View Controller-->
         <scene sceneID="GUh-h8-6aR">
             <objects>
-                <viewController id="u2L-w5-miK" sceneMemberID="viewController">
+                <viewController id="u2L-w5-miK" customClass="TrainViewController" customModule="Vade" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C8U-Ef-iPf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="y5B-G0-4oc" userLabel="Container Stack View">
+                                <rect key="frame" x="20" y="64" width="335" height="534"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="FR6-JS-9WV" userLabel="Info Stack View">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="107"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xtc-Ea-1Z4">
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="35.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEx-mF-X5g">
+                                                <rect key="frame" x="0.0" y="35.5" width="335" height="35.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sNt-u6-V3R">
+                                                <rect key="frame" x="0.0" y="71" width="335" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9UB-L8-JA4">
+                                        <rect key="frame" x="0.0" y="115" width="335" height="357.5"/>
+                                    </mapView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqv-kH-r1F">
+                                        <rect key="frame" x="0.0" y="480.5" width="335" height="53.5"/>
+                                        <state key="normal" title="Start"/>
+                                        <connections>
+                                            <action selector="activationButtonAction:" destination="u2L-w5-miK" eventType="touchUpInside" id="J0M-u0-6mt"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="FR6-JS-9WV" firstAttribute="height" secondItem="y5B-G0-4oc" secondAttribute="height" multiplier="0.2" id="1hg-rj-czG"/>
+                                    <constraint firstItem="Mqv-kH-r1F" firstAttribute="height" secondItem="y5B-G0-4oc" secondAttribute="height" multiplier="0.1" id="6WG-GG-0Lb"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="18f-j3-8rf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="y5B-G0-4oc" firstAttribute="top" secondItem="18f-j3-8rf" secondAttribute="top" constant="20" id="8VI-2M-OBQ"/>
+                            <constraint firstItem="18f-j3-8rf" firstAttribute="bottom" secondItem="y5B-G0-4oc" secondAttribute="bottom" constant="20" id="Eka-lt-8IR"/>
+                            <constraint firstItem="18f-j3-8rf" firstAttribute="trailing" secondItem="y5B-G0-4oc" secondAttribute="trailing" constant="20" id="kaG-Tu-d41"/>
+                            <constraint firstItem="y5B-G0-4oc" firstAttribute="leading" secondItem="18f-j3-8rf" secondAttribute="leading" constant="20" id="skh-Ql-ef5"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Train" id="aZ2-aR-pUb"/>
+                    <navigationItem key="navigationItem" id="W24-6x-uwq"/>
+                    <connections>
+                        <outlet property="activationButton" destination="Mqv-kH-r1F" id="XCg-Rs-mZJ"/>
+                        <outlet property="containerStackView" destination="y5B-G0-4oc" id="ZK4-Ia-9qH"/>
+                        <outlet property="distanceLabel" destination="Xtc-Ea-1Z4" id="Wtz-uN-96p"/>
+                        <outlet property="infoStackView" destination="FR6-JS-9WV" id="YwE-Pj-9OP"/>
+                        <outlet property="mapView" destination="9UB-L8-JA4" id="obM-qx-Zs2"/>
+                        <outlet property="paceLabel" destination="sNt-u6-V3R" id="5Qs-XV-RgT"/>
+                        <outlet property="timeLabel" destination="bEx-mF-X5g" id="FQx-54-equ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vSK-58-eSc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5219" y="478"/>
+            <point key="canvasLocation" x="6157.6000000000004" y="477.21139430284859"/>
+        </scene>
+        <!--Run Details View Controller-->
+        <scene sceneID="aI8-5W-Oqp">
+            <objects>
+                <viewController storyboardIdentifier="RunDetailsVC" id="OGB-d0-wgt" customClass="RunDetailsViewController" customModule="Vade" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wGu-dP-F0H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cNI-IV-2Xr" userLabel="Container Stack View">
+                                <rect key="frame" x="20" y="20" width="335" height="627"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6UR-qd-kaK">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="94"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="i4I-jJ-snw">
+                                        <rect key="frame" x="0.0" y="104" width="335" height="356.5"/>
+                                    </mapView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="CJI-GJ-hDF" userLabel="Info Stack View">
+                                        <rect key="frame" x="0.0" y="470.5" width="335" height="156.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEB-tU-SIs">
+                                                <rect key="frame" x="132" y="0.0" width="71.5" height="52"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ol-yF-reU">
+                                                <rect key="frame" x="146.5" y="52" width="42.5" height="52.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYa-6h-dUy">
+                                                <rect key="frame" x="146.5" y="104.5" width="42" height="52"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="6UR-qd-kaK" firstAttribute="height" secondItem="cNI-IV-2Xr" secondAttribute="height" multiplier="0.15" id="Nmi-CE-mPg"/>
+                                    <constraint firstItem="CJI-GJ-hDF" firstAttribute="height" secondItem="cNI-IV-2Xr" secondAttribute="height" multiplier="0.25" id="OcU-qa-k8F"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="CAt-aP-8Nn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CAt-aP-8Nn" firstAttribute="bottom" secondItem="cNI-IV-2Xr" secondAttribute="bottom" constant="20" id="Jq3-Dd-syc"/>
+                            <constraint firstItem="CAt-aP-8Nn" firstAttribute="trailing" secondItem="cNI-IV-2Xr" secondAttribute="trailing" constant="20" id="Kvc-K5-73V"/>
+                            <constraint firstItem="cNI-IV-2Xr" firstAttribute="leading" secondItem="CAt-aP-8Nn" secondAttribute="leading" constant="20" id="dNi-37-EHy"/>
+                            <constraint firstItem="cNI-IV-2Xr" firstAttribute="top" secondItem="CAt-aP-8Nn" secondAttribute="top" constant="20" id="eil-lA-UAe"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="containerStackView" destination="cNI-IV-2Xr" id="b9F-Ig-B0l"/>
+                        <outlet property="dateLabel" destination="6UR-qd-kaK" id="Pfs-ZB-Hfu"/>
+                        <outlet property="distanceLabel" destination="hEB-tU-SIs" id="82z-SX-NI4"/>
+                        <outlet property="infoStackView" destination="CJI-GJ-hDF" id="8wK-Xb-tou"/>
+                        <outlet property="mapView" destination="i4I-jJ-snw" id="LZm-WY-c1O"/>
+                        <outlet property="paceLabel" destination="eYa-6h-dUy" id="8xT-Xy-ThJ"/>
+                        <outlet property="timeLabel" destination="2Ol-yF-reU" id="DfL-nf-MLE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Po-X5-6Qk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7018" y="477"/>
         </scene>
         <!--Profile-->
         <scene sceneID="Cif-GD-9Xl">
@@ -390,7 +523,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="9VD-hc-SLH" kind="relationship" relationship="viewControllers" id="eM6-hq-88a"/>
-                        <segue destination="u2L-w5-miK" kind="relationship" relationship="viewControllers" id="qeV-LO-FTd"/>
+                        <segue destination="bWs-Rf-vQr" kind="relationship" relationship="viewControllers" id="qeV-LO-FTd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b62-ts-wnV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -445,6 +578,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZt-NI-DK5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1961" y="818"/>
+        </scene>
+        <!--Train-->
+        <scene sceneID="9nZ-Bw-2De">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bWs-Rf-vQr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Train" id="aZ2-aR-pUb"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PSo-TW-HSK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="u2L-w5-miK" kind="relationship" relationship="rootViewController" id="ifT-3L-n8m"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XJI-kW-eGn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5218.3999999999996" y="477.21139430284859"/>
         </scene>
     </scenes>
     <resources>
